All elements aligned more or less correctly. Content almost final. Snapshot EoD 2022-7-12

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,7 @@ gap: 16px;
     flex-flow: column-wrap;
     align-content: center;
     justify-content: flex-start;
-
-
+    padding: 32px;
 }
 
 .SomeRandomInformation{
@@ -74,7 +73,7 @@ gap: 16px;
 
 .FourAlignedPics{
     display: flex;
-    text-align: justify;
+    text-align: center;
     flex-direction: row;
     justify-content: center;
     align-content: center;
@@ -84,21 +83,34 @@ gap: 16px;
 }
 
 .InspiringQuote{
-    background-color: #E5E7EB
-
-
+    display: flex;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-content: center;
+    font-size: 32px;
+    padding: 20px;
 }
 
 .CallToAction{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding: 64px;
+}
 
+.ActionButton{
 
+    border-radius: 55px;
+    padding: 16px;
+    background-color:#3882F6;
 
 }
 
 .Copyright{
-
-
-
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: center;
 }
 
 
